k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shiptrack-pro
  labels:
    name: shiptrack-pro
